<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0066FF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainBtn"
        android:layout_width="168dp"
        android:layout_height="57dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/noto_sans_sc_bold"
        android:text="@string/main_btn"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="#FF6052"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTxt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/mainTitulo"
        android:layout_width="353dp"
        android:layout_height="76dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/noto_sans_sc_bold"
        android:text="@string/main_titulo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoOdontoprev" />

    <TextView
        android:id="@+id/mainTxt"
        android:layout_width="378dp"
        android:layout_height="102dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans_sc"
        android:text="@string/main_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitulo" />

    <ImageView
        android:id="@+id/logoOdontoprev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_odontoprev" />

</androidx.constraintlayout.widget.ConstraintLayout>